fixed alignment and added color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,12 @@ h1 {
 
 }
 p {
-    color: rgb(238, 9, 116);
-    
-}
+    color: rgb(238, 9, 116);  
+    background-color: white;
+    display: block;
+    width: 300px;      
+    position: relative;
+    top: 25px;
+    left: 500px;
+
+}  
